src/objects/FSTR__Mixpanel_Data_Storage__c.object
<CustomObject>
    <description>Stores data about user activity that will be sent to Mixpanel.</description>
    <fields>
        <fullName>FSTR__DefinitionData__c</fullName>
        <label>DefinitionData</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__DefinitionObjectTypes__c</fullName>
        <label>Definition Object Types</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__DistinctUsers30__c</fullName>
        <label>Distinct Users (Past 30 Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__DistinctUsers90__c</fullName>
        <label>Distinct Users (Past 90 Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__DistinctUsers__c</fullName>
        <label>Distinct Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__InitiatorObjectTypes__c</fullName>
        <label>Initiator Object Types</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__MajorVersion__c</fullName>
        <label>Major Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__MinorVersion__c</fullName>
        <label>Minor Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Patch__c</fullName>
        <label>Patch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalApprovalSteps__c</fullName>
        <label>Total Approval Steps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalChecklistItems__c</fullName>
        <label>Total Checklist Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalChecklists__c</fullName>
        <label>Total Checklists</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalDefinitions__c</fullName>
        <label>Total Definitions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalDelayedSteps__c</fullName>
        <label>Total Delayed Steps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalDependencies__c</fullName>
        <label>Total Dependencies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalDocumentGeneration__c</fullName>
        <label>Total Document Generation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalEmailAlerts__c</fullName>
        <label>Total Email Alerts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalEventPlaceholders__c</fullName>
        <label>Total Event Placeholders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalFieldUpdateSteps__c</fullName>
        <label>Total Field Update Steps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalFieldUpdates__c</fullName>
        <label>Total Field Updates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalInitiatorCriteria__c</fullName>
        <label>Total Initiator Criteria</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalInitiators__c</fullName>
        <label>Total Initiators</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalLoopBackSteps__c</fullName>
        <label>Total Loopback Steps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalPCESteps__c</fullName>
        <label>Total PCE Steps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalSteps__c</fullName>
        <label>Total Steps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalTasks90__c</fullName>
        <label>Total Tasks (Past 90 Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalTasks__c</fullName>
        <label>Total Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalValidations__c</fullName>
        <label>Total Validations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__TotalWebserviceCallouts__c</fullName>
        <label>Total Webservice Callouts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__UserCount__c</fullName>
        <label>User Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mixpanel Data Storage</label>
    <nameField>
        <label>Mixpanel Data Storage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mixpanel Data Storage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>